@@ -40,6 +40,10 @@
      and v6 addresses when connected to a server with this quirk, despite
      having set 0.0.0.0 as a bind_address.
      report and patch from Jan.Pechanec AT Sun.COM; ok dtucker@
+   - djm@cvs.openbsd.org 2008/01/19 23:09:49
+     [readconf.c readconf.h sshconnect2.c]
+     promote rekeylimit to a int64 so it can hold the maximum useful limit
+     of 2^32; report and patch from Jan.Pechanec AT Sun.COM, ok dtucker@
 
 20080119
  - (djm) Silence noice from expr in ssh-copy-id; patch from
@@ -3568,4 +3572,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4827 2008/02/10 11:25:24 djm Exp $
+$Id: ChangeLog,v 1.4828 2008/02/10 11:25:52 djm Exp $
